--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.6.10",
-    "vue-head": "^2.1.1"
+    "vue-head": "^2.1.1",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
