--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "ssr:build": "vue-cli-service ssr:build",
+    "ssr:serve": "vue-cli-service ssr:serve",
+    "ssr:start": "cross-env NODE_ENV=production vue-cli-service ssr:serve --mode production"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -14,9 +17,11 @@
     "vue": "^2.6.10",
     "vue-head": "^2.1.1",
     "vue-router": "^3.0.3",
+    "vue-server-renderer": "^2.6.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@akryum/vue-cli-plugin-ssr": "^0.5.0",
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
