--- a/package.json
+++ b/package.json
@@ -5,26 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "ssr:build": "vue-cli-service ssr:build",
-    "ssr:serve": "vue-cli-service ssr:serve",
-    "ssr:start": "cross-env NODE_ENV=production vue-cli-service ssr:serve --mode production"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.6.10",
-    "vue-head": "^2.1.1",
     "vue-router": "^3.0.3",
-    "vue-server-renderer": "^2.6.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@akryum/vue-cli-plugin-ssr": "^0.5.0",
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
+    "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
@@ -37,7 +30,7 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "@vue/prettier"
     ],
     "rules": {},
     "parserOptions": {
